0.2.7 - Updated project, compiler and build handling.